# hard_tree_arch_sim

./: Cargo.toml  asdf.luc  dockerfile
src/: controller.rs  cpu.rs  cpu_registers.rs  defn.rs  instruction.rs  instruction_reader.rs  lib.rs  main_memory.rs  sim.rs  word.rs
src/alu/: config.rs  core.rs  mod.rs
src/application/: direction.rs  mod.rs
src/application/draw/: alu.rs  color.rs  component_bank.rs  cpu.rs  cpu_register.rs  cursor.rs  grid_to_screen.rs  instruction_memory.rs  mod.rs  path.rs  port.rs  pos.rs  shapes.rs
src/application/draw/text/: font_dims.rs  mod.rs
src/application/draw/text/normal/: mod.rs
src/application/draw/text/tiny/: mod.rs
src/application/draw/text/title/: mod.rs
src/application/grid/: alu.rs  blocked_point.rs  component.rs  connection.rs  cpu.rs  cpu_register.rs  grid.rs  grid_limits.rs  line.rs  mod.rs  movement.rs  path.rs  pos.rs  rect.rs
src/application/simulation/: component_bank.rs  controller.rs  cpu.rs  cpu_registers.rs  instruction.rs  instruction_reader.rs  main_memory.rs  mod.rs  simulation.rs
src/application/simulation/alu/: config.rs  core.rs  mod.rs  op.rs
src/application/simulation/memory_primitives/: mod.rs  register.rs
src/memory_primitives/: register.rs  register_bank.rs
src/tools/: convert.rs  mod.rs  sign.rs  to_i32.rs  used_in.rs
