[package]
name = "soldiers"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16.0"
bevy_tween = "0.8.0"
bevy_vector_shapes = "0.10.0"
either = "1.15.0"
itertools = "0.14.0"
structstruck = "0.5.0"

[profile.dev.package."bevy"]
opt-level = 3
incremental = true

[profile.release.package."bevy"]
opt-level = 3
incremental = true
